--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,53 +1,1 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Ropa Sans', sans-serif;
-  background-color: #000;
-  color: #fff;
-  box-sizing: border-box;
-  overflow: hidden; }
-
-canvas {
-  width: 100%;
-  height: 100%; }
-
-h1 {
-  padding: 0;
-  margin: 0;
-  color: inherit; }
-
-.loader {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  z-index: 0;
-  -webkit-transform: scale(0, 1);
-          transform: scale(0, 1);
-  -webkit-transform-origin: left;
-          transform-origin: left;
-  transition: -webkit-transform 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.3s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  background: #fc00ff;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #6000de, #fc00ff);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-
-a {
-  color: #fff;
-  text-decoration: none; }
-
-.credits {
-  margin-left: 20px;
-  margin-top: 20px;
-  position: relative;
-  z-index: 1; }
-
-.removeLoader {
-  -webkit-transform-origin: bottom;
-          transform-origin: bottom;
-  transition: -webkit-transform 0.3s 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.3s 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.3s 0.3s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.3s 0.3s cubic-bezier(0.23, 1, 0.32, 1); }
+body,h1,html{padding:0;margin:0}.controls,.credits,.loader,.play-intro{position:absolute}.pause,.play,.play-intro{display:none}body,html{font-family:'Ropa Sans',sans-serif;background-color:#4b12b3;color:#fff;box-sizing:border-box;overflow:hidden;cursor:-webkit-grab;cursor:-moz-grab}canvas{width:100%;height:100%}h1{color:inherit}.play-intro{top:50%;left:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);height:100px;width:100px;cursor:pointer}.credits,.loader,.play-intro svg{width:100%}.loader{height:100%;top:0;z-index:0;-webkit-transform:scale(0,1);transform:scale(0,1);-webkit-transform-origin:left;transform-origin:left;transition:-webkit-transform .3s cubic-bezier(.23,1,.32,1);transition:transform .3s cubic-bezier(.23,1,.32,1);transition:transform .3s cubic-bezier(.23,1,.32,1),-webkit-transform .3s cubic-bezier(.23,1,.32,1);background:linear-gradient(to right,#6000de,#fc00ff)}a{color:#fff;text-decoration:none}.credits{margin:20px;z-index:1}.credits h1{font-size:6vw;width:60%;line-height:1.4}.credits .controls svg{width:5vw}.removeLoader{-webkit-transform-origin:bottom;transform-origin:bottom;transition:-webkit-transform .3s .3s cubic-bezier(.23,1,.32,1);transition:transform .3s .3s cubic-bezier(.23,1,.32,1);transition:transform .3s .3s cubic-bezier(.23,1,.32,1),-webkit-transform .3s .3s cubic-bezier(.23,1,.32,1)}button{background-color:transparent;border:0;cursor:pointer}.controls{right:30px;top:10px}.control-show{display:block}@media screen and (min-width:768px){.credits{margin-left:20px;margin-top:20px;position:absolute;z-index:1;bottom:inherit;width:100%}.credits h1{font-size:22pt;width:auto;line-height:1.4}.credits .controls{right:50px}.credits .controls svg{width:auto}}
